--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -10,65 +10,88 @@
 
 <body class="w3-light-grey">
 
-    <!-- Top container -->
-    <div class="w3-bar w3-top w3-black w3-large" style="z-index:4">
-        <form class="w3-bar-item w3-right" action="/myaccount">
-            <input maxlength="6" type="search" placeholder="ID or ACN" pattern="[0-9]{3}|[0-9]{6}"
-                title="Enter your 3 digit id number or 6 digit account number" name="id" required id="sid">
-            <input type="button" value="Get" style="width: 50px"
-                onclick="changeTo('myaccount?id='+ document.getElementById('sid').value)">
-        </form>
-        <button class="w3-bar-item w3-button w3-hide-large w3-hover-none w3-hover-text-light-grey"
-            onclick="w3_open();"><i class="fa fa-bars"></i>  Menu</button>
-    </div>
+        <!-- Top container -->
+        <div class="w3-bar w3-top w3-black w3-large" style="z-index:4">
+                <form class="w3-bar-item w3-right" action="/myaccount">
+                        <input maxlength="6" type="search" placeholder="ID or ACN" pattern="[0-9]{3}|[0-9]{6}"
+                                title="Enter your 3 digit id number or 6 digit account number" name="id" required
+                                id="sid">
+                        <input type="button" value="Get" style="width: 50px"
+                                onclick="changeTo('myaccount?id='+ document.getElementById('sid').value)">
+                </form>
+                <button class="w3-bar-item w3-button w3-hide-large w3-hover-none w3-hover-text-light-grey"
+                        onclick="w3_open();"><i class="fa fa-bars"></i>  Menu</button>
+        </div>
 
-    <!-- Sidebar/menu -->
-    <nav class="w3-sidebar w3-collapse w3-blue w3-animate-left" style="z-index:3;width:300px;" id="mySidebar"><br>
-        <!-- <div class="w3-container">
+        <!-- Sidebar/menu -->
+        <nav class="w3-sidebar w3-collapse w3-blue w3-animate-left" style="z-index:3;width:300px;" id="mySidebar"><br>
+                <!-- <div class="w3-container">
             <h4>Dashboard</h4>
         </div>
         <hr> -->
-        <div class="w3-bar-block">
-            <a href="#" class="w3-bar-item w3-button w3-padding-16 w3-hide-large w3-dark-grey w3-hover-black"
-                onclick="w3_close()" title="close menu"><i class="fa fa-window-close fa-fw"></i>  Close Menu</a>
-            <a href="#" class="w3-bar-item w3-button w3-padding" onclick="changeTo('admin/overview-old.html')"><i
-                    class="fa fa-info-circle fa-fw"></i> Overview</a>
-            <a href="#" class="w3-bar-item w3-button w3-padding" onclick="changeTo('customers')"><i
-                    class="fa fa-users fa-fw"></i> Customers</a>
-            <a href="#" class="w3-bar-item w3-button w3-padding" onclick="changeTo('accounts')"><i
-                    class="fa fa-coins fa-fw"></i> Accounts</a>
-            <a href="#" class="w3-bar-item w3-button w3-padding" onclick="changeTo('admin/deposits.html')"><i
-                    class="fa fa-money-check fa-fw"></i> Deposits</a>
-            <a href="#" class="w3-bar-item w3-button w3-padding" onclick="changeTo('admin/withdraws.html')"><i
-                    class="fa fa-arrow-circle-up fa-fw"></i> Withdraws</a>
-            <a href="#" class="w3-bar-item w3-button w3-padding" onclick="changeTo('admin/add.html')"><i
-                    class="fa fa-plus fa-fw"></i> Add</a>
-            <a href="#" class="w3-bar-item w3-button w3-padding" onclick="changeTo('admin/edit.html')"><i
-                    class="fa fa-edit fa-fw"></i> Edit</a>
-            <a href="#" class="w3-bar-item w3-button w3-padding"><i class="fa fa-minus fa-fw"></i> Delete</a>
-            <a href="#" class="w3-bar-item w3-button w3-padding" onclick="changeTo('admin/withdraw.html')"><i
-                    class="fa fa-arrow-alt-circle-up fa-fw"></i> Withdraw</a>
-            <a href="#" class="w3-bar-item w3-button w3-padding" onclick="changeTo('admin/email.html')"><i
-                    class="fa fa-at fa-fw"></i> Mail</a>
-            <a href="#" class="w3-bar-item w3-button w3-padding" onclick="changeTo('admin/sms.html')"><i
-                    class="fa fa-sms fa-fw"></i> SMS</a>
-            <a href="#" class="w3-bar-item w3-button w3-padding"><i class="fa fa-cog fa-fw"
-                    onclick="changeTo('admin/settings.html')"></i> Settings</a>
-            <hr>
-            <a href="/logout" class="w3-bar-item w3-button w3-padding"><i class="fa fa-lock fa-fw"></i> Logout</a>
-        </div>
-    </nav>
+                <div class="w3-bar-block">
+                        <a href="#"
+                                class="w3-bar-item w3-button w3-padding-16 w3-hide-large w3-dark-grey w3-hover-black"
+                                onclick="w3_close()" title="close menu"><i class="fa fa-window-close fa-fw"></i>  Close
+                                Menu</a>
+
+                        <a href="#" class="w3-bar-item w3-button w3-padding"
+                                onclick="changeTo('admin/overview-old.html')"><i class="fa fa-info-circle fa-fw"></i>
+                                Overview</a>
+                        <div class="view" style="border-left: 5px solid purple ">
+
+                                <a href="#" class="w3-bar-item w3-button w3-padding" onclick="changeTo('customers')"><i
+                                                class="fa fa-users fa-fw"></i> Customers</a>
+                                <a href="#" class="w3-bar-item w3-button w3-padding" onclick="changeTo('accounts')"><i
+                                                class="fa fa-coins fa-fw"></i> Accounts</a>
+                                <a href="#" class="w3-bar-item w3-button w3-padding"
+                                        onclick="changeTo('admin/deposits.html')"><i
+                                                class="fa fa-money-check fa-fw"></i> Deposits</a>
+                                <a href="#" class="w3-bar-item w3-button w3-padding"
+                                        onclick="changeTo('admin/withdraws.html')"><i
+                                                class="fa fa-arrow-circle-up fa-fw"></i> Withdraws</a>
+                                <!-- <hr> -->
+                        </div>
+                        <div class="modify" style="border-left: 5px solid palegreen ">
+
+                                <a href="#" class="w3-bar-item w3-button w3-padding"
+                                        onclick="changeTo('admin/add.html')"><i class="fa fa-plus fa-fw"></i> Add</a>
+
+                                <a href="#" class="w3-bar-item w3-button w3-padding"
+                                        onclick="changeTo('admin/edit.html')"><i class="fa fa-edit fa-fw"></i> Edit</a>
+                                <a href="#" class="w3-bar-item w3-button w3-padding"><i class="fa fa-minus fa-fw"></i>
+                                        Delete</a>
+                                <a href="#" class="w3-bar-item w3-button w3-padding"
+                                        onclick="changeTo('admin/withdraw.html')"><i
+                                                class="fa fa-arrow-alt-circle-up fa-fw"></i> Withdraw</a>
+                        </div>
+                        <div class="utils" style="border-left: 5px solid firebrick">
+
+                                <a href="#" class="w3-bar-item w3-button w3-padding" onclick="changeTo('admin/email.html')"><i
+                                                class="fa fa-at fa-fw"></i> Mail</a>
+                                <a href="#" class="w3-bar-item w3-button w3-padding" onclick="changeTo('admin/sms.html')"><i
+                                                class="fa fa-sms fa-fw"></i> SMS</a>
+                                <a href="#" class="w3-bar-item w3-button w3-padding"><i class="fa fa-cog fa-fw"
+                                                onclick="changeTo('admin/settings.html')"></i> Settings</a>
+                        </div>
+                        <hr>
+                        <a href="/logout" class="w3-bar-item w3-button w3-padding w3-green"><i
+                                        class="fa fa-lock fa-fw"></i> Logout</a>
+                        <br>
+                        <br>
+                </div>
+        </nav>
 
 
-    <!-- Overlay effect when opening sidebar on small screens -->
-    <div class="w3-overlay w3-hide-large w3-animate-opacity" onclick="w3_close()" style="cursor:pointer"
-        title="close side menu" id="myOverlay"></div>
+        <!-- Overlay effect when opening sidebar on small screens -->
+        <div class="w3-overlay w3-hide-large w3-animate-opacity" onclick="w3_close()" style="cursor:pointer"
+                title="close side menu" id="myOverlay"></div>
 
-    <!-- !PAGE CONTENT! -->
-    <div class="w3-main" style="margin-left:300px;margin-top:43px;" id="content">
+        <!-- !PAGE CONTENT! -->
+        <div class="w3-main" style="margin-left:300px;margin-top:43px;" id="content">
 
-        <script src="/static/js/main.js"></script>
-        <script>changeTo('admin/overview-old.html')</script>
+                <script src="/static/js/main.js"></script>
+                <script>changeTo('admin/overview-old.html')</script>
 
 </body>
 
